[tool.poetry]
name = "fracdiff"
version = "0.9.1"
description = "Super-fast fractional differentiation."
authors = ["Shota Imaki <shota.imaki.0801@gmail.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/fracdiff/fracdiff"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.24.1"  # Permet toute version 1.24.1 ou supérieure
scipy = ">=1.10.0"  # Permet toute version 1.10.0 ou supérieure
statsmodels = {git = "https://github.com/statsmodels/statsmodels.git"}  # Utilise la version la plus récente sur GitHub
scikit-learn = {version = ">=1.2.1", optional = true}  # Permet toute version 1.2.1 ou supérieure
torch = {version = ">=1.13.1", optional = true}  # Permet toute version 1.13.1 ou supérieure

[tool.poetry.extras]
scikit-learn = ["scikit-learn"]
torch = ["torch"]

[tool.poetry.dev-dependencies]
pytest = ">=7.0.1"  # Permet toute version 7.0.1 ou supérieure
pytest-cov = ">=4.0.0"  # Permet toute version 4.0.0 ou supérieure
codecov = ">=2.1.11"  # Permet toute version 2.1.11 ou supérieure
black = ">=23.1"  # Permet toute version 23.1 ou supérieure
isort = ">=5.8.0"  # Permet toute version 5.8.0 ou supérieure
Sphinx = ">=5.3.0"  # Permet toute version 5.3.0 ou supérieure
furo = ">=2022.1.2"  # Permet toute version 2022.1.2 ou supérieure
sphinx-autobuild = ">=2021.3.14"  # Permet toute version 2021.3.14 ou supérieure
sphinx-copybutton = ">=0.5.0"  # Permet toute version 0.5.0 ou supérieure
mypy = ">=0.991"  # Permet toute version 0.991 ou supérieure
pylint = ">=2.11.1"  # Permet toute version 2.11.1 ou supérieure

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
force_single_line = true
